# ddos-detection

./: .gitignore  analysis.ipynb  app.py  deploy.sh  main.py  pyproject.toml  requirements.txt  train.py
artifacts/: udp_ddos_pipeline.pkl  udp_features.json
