[project]
name = "ddos-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "boto3>=1.40.65",
    "fastparquet>=2024.11.0",
    "flask>=3.1.2",
    "joblib>=1.5.2",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "pyarrow>=22.0.0",
    "scikit-learn>=1.7.2",
]
